--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -55,7 +55,8 @@
                     "ignoreFailures": true
                 }
             ],
-            "preLaunchTask": "build - C++ (Linux)"
+            "preLaunchTask": "build - C++ (Linux)",
+            "console": "integratedTerminal"
         }
     ]
 }
