modified:   .vscode/launch.json 	modified:   .vscode/settings.json 	modified:   Java/MinecraftServerInstaller 	deleted:    Java/test.java 	new file:   "Java/\350\250\210\346\246\202\344\275\234\346\245\255/A1-110502557.java"

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -2,19 +2,18 @@
     "version": "0.2.0",
     "configurations": [
         {
-            "type": "java",
-            "name": "Launch test",
-            "request": "launch",
-            "mainClass": "test",
-            "projectName": "Programming_38f59100"
-        },
-        {
             "name": "Python",
             "type": "python",
             "request": "launch",
             "program": "${file}",
             "cwd": "${fileDirname}",
             "console": "integratedTerminal"
+        },
+        {
+            "name": "Java",
+            "type": "java",
+            "request": "launch",
+            "mainClass": "Main",
         },
         {
             "name": "GDB - Windows",
