modified:   .gitignore 	modified:   .vscode/settings.json 	new file:   "Java/\350\250\210\345\257\246\344\275\234\346\245\255/P1_110502557.java" 	renamed:    "Java/\350\250\210\346\246\202\344\275\234\346\245\255/A1-110502557.java" -> "Java/\350\250\210\346\246\202\344\275\234\346\245\255/A1_110502557.java"

--- a/.gitignore
+++ b/.gitignore
@@ -2,4 +2,5 @@
 .vscode/a.out
 .vscode/c_cpp_properties.json
 .vscode/c_cpp_properties.json.disable
+.vscode/classpath
 Java/MinecraftServerInstaller
