--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -83,5 +83,9 @@
         "c:\\Compilers\\Java\\javafx-sdk-17.0.1\\lib\\javafx.web.jar",
         "c:\\Compilers\\Java\\javafx-sdk-17.0.1\\lib\\javafx-swt.jar"
     ],
-    "java.project.outputPath": ".vscode\\classpath"
+    "java.project.outputPath": ".vscode\\classpath",
+    "java.project.sourcePaths": [
+        "Java\\計實作業",
+        "Java\\計概作業"
+    ]
 }
