modified:   .gitignore 	new file:   "C++/\347\250\213\345\274\217\350\250\255\350\250\210/0224_work1.cpp" 	new file:   "C++/\347\250\213\345\274\217\350\250\255\350\250\210/0224_work2.cpp" 	deleted:    "C++/\347\250\213\345\274\217\350\250\255\350\250\210/20220216.cpp" 	new file:   "Java/\350\250\210\346\246\202\344\275\234\346\245\255/A2_110502557.java" 	modified:   Python/test.py

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,6 @@
-.vscode/a.exe
-.vscode/a.out
+*.exe
+*.out
+*.class
 .vscode/c_cpp_properties.json
 .vscode/c_cpp_properties.json.disable
 .vscode/classpath
