--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -72,8 +72,8 @@
         "typeinfo": "cpp",
         "valarray": "cpp"
     },
+    "java.jdt.ls.java.home": "C:\\Compilers\\Java\\jdk-17.0.2",
     "java.project.referencedLibraries": [
-        "lib/**/*.jar",
         "c:\\Compilers\\Java\\javafx-sdk-17.0.1\\lib\\javafx.base.jar",
         "c:\\Compilers\\Java\\javafx-sdk-17.0.1\\lib\\javafx.controls.jar",
         "c:\\Compilers\\Java\\javafx-sdk-17.0.1\\lib\\javafx.fxml.jar",
@@ -81,7 +81,15 @@
         "c:\\Compilers\\Java\\javafx-sdk-17.0.1\\lib\\javafx.media.jar",
         "c:\\Compilers\\Java\\javafx-sdk-17.0.1\\lib\\javafx.swing.jar",
         "c:\\Compilers\\Java\\javafx-sdk-17.0.1\\lib\\javafx.web.jar",
-        "c:\\Compilers\\Java\\javafx-sdk-17.0.1\\lib\\javafx-swt.jar"
+        "c:\\Compilers\\Java\\javafx-sdk-17.0.1\\lib\\javafx-swt.jar",
+        "c:\\Compilers\\Java\\javafx-sdk-17.0.2\\lib\\javafx.base.jar",
+        "c:\\Compilers\\Java\\javafx-sdk-17.0.2\\lib\\javafx.controls.jar",
+        "c:\\Compilers\\Java\\javafx-sdk-17.0.2\\lib\\javafx.fxml.jar",
+        "c:\\Compilers\\Java\\javafx-sdk-17.0.2\\lib\\javafx.graphics.jar",
+        "c:\\Compilers\\Java\\javafx-sdk-17.0.2\\lib\\javafx.media.jar",
+        "c:\\Compilers\\Java\\javafx-sdk-17.0.2\\lib\\javafx.swing.jar",
+        "c:\\Compilers\\Java\\javafx-sdk-17.0.2\\lib\\javafx.web.jar",
+        "c:\\Compilers\\Java\\javafx-sdk-17.0.2\\lib\\javafx-swt.jar"
     ],
     "java.project.outputPath": ".vscode\\classpath",
     "java.project.sourcePaths": [
