--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -13,9 +13,9 @@
             "name": "Java",
             "type": "java",
             "request": "launch",
-            // "cwd": "${fileDirname}",
+            "classPaths": ["${workspaceRoot}\\.vscode\\classpath"],
             "mainClass": "${file}",
-            "vmArgs": "--module-path C:\\Compilers\\Java\\javafx-sdk-17.0.2\\lib --add-modules javafx.controls,javafx.fxml"
+            "vmArgs": "--module-path C:\\Compilers\\Java\\javafx-sdk-17.0.2\\lib --add-modules=javafx.controls,javafx.fxml"
         },
         {
             "name": "GDB - Windows",
