--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -72,16 +72,8 @@
         "typeinfo": "cpp",
         "valarray": "cpp"
     },
-    "java.jdt.ls.java.home": "C:\\Compilers\\Java\\jdk-17.0.2",
+    // "java.jdt.ls.java.home": "C:\\Compilers\\Java\\jdk-17.0.2",
     "java.project.referencedLibraries": [
-        "c:\\Compilers\\Java\\javafx-sdk-17.0.1\\lib\\javafx.base.jar",
-        "c:\\Compilers\\Java\\javafx-sdk-17.0.1\\lib\\javafx.controls.jar",
-        "c:\\Compilers\\Java\\javafx-sdk-17.0.1\\lib\\javafx.fxml.jar",
-        "c:\\Compilers\\Java\\javafx-sdk-17.0.1\\lib\\javafx.graphics.jar",
-        "c:\\Compilers\\Java\\javafx-sdk-17.0.1\\lib\\javafx.media.jar",
-        "c:\\Compilers\\Java\\javafx-sdk-17.0.1\\lib\\javafx.swing.jar",
-        "c:\\Compilers\\Java\\javafx-sdk-17.0.1\\lib\\javafx.web.jar",
-        "c:\\Compilers\\Java\\javafx-sdk-17.0.1\\lib\\javafx-swt.jar",
         "c:\\Compilers\\Java\\javafx-sdk-17.0.2\\lib\\javafx.base.jar",
         "c:\\Compilers\\Java\\javafx-sdk-17.0.2\\lib\\javafx.controls.jar",
         "c:\\Compilers\\Java\\javafx-sdk-17.0.2\\lib\\javafx.fxml.jar",
