modified:   .vscode/settings.json 	new file:   "Java/\350\250\210\345\257\246\350\200\203\350\251\246/stu_110502557/E1.java" 	new file:   "Java/\350\250\210\345\257\246\350\200\203\350\251\246/stu_110502557/E2.java" 	new file:   "Java/\350\250\210\345\257\246\350\200\203\350\251\246/stu_110502557/stu_110502557.zip"

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -86,6 +86,7 @@
     "java.project.outputPath": ".vscode\\classpath",
     "java.project.sourcePaths": [
         "Java\\計實作業",
+        "Java\\計實考試",
         "Java\\計概作業"
     ]
 }
