modified:   .gitignore 	modified:   .vscode/settings.json 	new file:   C++/LeetCode/0027.cpp 	new file:   C++/LeetCode/0028.cpp 	new file:   C++/LeetCode/0035.cpp 	new file:   C++/LeetCode/0058.cpp 	new file:   C++/LeetCode/0066.cpp 	new file:   C++/LeetCode/0067.cpp

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -70,7 +70,8 @@
         "thread": "cpp",
         "typeindex": "cpp",
         "typeinfo": "cpp",
-        "valarray": "cpp"
+        "valarray": "cpp",
+        "variant": "cpp"
     },
     // "java.jdt.ls.java.home": "C:\\Compilers\\Java\\jdk-17.0.2",
     "java.project.referencedLibraries": [
