modified:   .vscode/launch.json 	new file:   C++/LeetCode/0141.cpp 	new file:   C++/LeetCode/0202.cpp

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -26,7 +26,7 @@
             "args": [],
             "stopAtEntry": false,
             "cwd": "${workspaceFolder}",
-            "externalConsole": true,
+            "externalConsole": false,
             "MIMode": "gdb",
             "miDebuggerPath": "C:/Compilers/mingw64/bin/gdb.exe",
             "setupCommands": [
