new file:   .vscode/a.o 	modified:   .vscode/launch.json 	modified:   .vscode/tasks.json 	new file:   test.asm

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -58,6 +58,14 @@
                 }
             ],
             "preLaunchTask": "build - C++ (Linux)",
+        },
+        {
+            "name": "Assembly32",
+            "type": "gdb",
+            "request": "launch",
+            "program": "${workspaceFolder}/.vscode/a.out",
+            "stopOnEntry": false,
+            "preLaunchTask": "ASM32"
         }
     ]
 }
