--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -48,7 +48,7 @@
         {
             "type": "shell",
             "label": "ASM32",
-            "command": "vscodeFolder=${workspaceFolder}/.vscode; nasm -F dwarf -g -f elf32 -i ${fileDirname} -o $vscodeFolder/a.o ${file}; ld -m elf_i386 -o $vscodeFolder/a.out $vscodeFolder/a.o;",
+            "command": "vscodeFolder=${workspaceFolder}/.vscode; nasm -F dwarf -g -f elf32 -i ${fileDirname} -o $vscodeFolder/a.o ${file}; ld -m elf_i386 -o $vscodeFolder/a.so $vscodeFolder/a.o;",
             "problemMatcher": {
                 "pattern": {
                   "regexp": "error"
