--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -97,5 +97,6 @@
         "Java\\計實考試",
         "Java\\計概作業",
         "Java\\BoundingBall"
-    ]
+    ],
+    "python.analysis.typeCheckingMode": "basic"
 }
