--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -30,6 +30,7 @@
             "args": [
                 "-fdiagnostics-color=always",
                 "-std=c++17",
+                "-Ofast",
                 "-g",
                 "${file}",
                 "-o",
