--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -100,8 +100,11 @@
     "java.project.sourcePaths": [
         "Java\\計實作業",
         "Java\\計實考試",
-        "Java\\計概作業",
-        "Java\\BoundingBall"
+        "Java\\計概作業"
     ],
-    "python.analysis.typeCheckingMode": "basic"
+    "python.analysis.typeCheckingMode": "basic",
+    "[python]": {
+        "editor.defaultFormatter": "ms-python.autopep8"
+    },
+    "python.formatting.provider": "none"
 }
