--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -81,7 +81,9 @@
         "rope": "cpp",
         "slist": "cpp",
         "ranges": "cpp",
-        "span": "cpp"
+        "span": "cpp",
+        "format": "cpp",
+        "stacktrace": "cpp"
     },
     // "java.jdt.ls.java.home": "C:\\Compilers\\Java\\jdk-17.0.2",
     "java.project.referencedLibraries": [
