--- a/Compiler/final_project/.vscode/settings.json
+++ b/Compiler/final_project/.vscode/settings.json
@@ -90,6 +90,9 @@
         "spanstream": "cpp",
         "stacktrace": "cpp",
         "syncstream": "cpp",
-        "typeindex": "cpp"
+        "typeindex": "cpp",
+        "queue": "cpp",
+        "stack": "cpp",
+        "text_encoding": "cpp"
     }
 }
